# boto3_mfa

./: README.md  demo.py  pyproject.toml
boto3_mfa/: __init__.py  otp.py  session.py
