[tool.poetry]
name = "boto3-mfa"
version = "0.1.0"
description = ""
authors = ["Christian Wygoda <christian.wygoda@satellitevu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
boto3 = "^1.34.149"
pyotp = "^2.9.0"

[tool.poetry.scripts]
totp = "boto3_mfa.otp:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
